--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -3,14 +3,15 @@ usePlugin 'java'
 repositories {
     mavenCentral()
 }
+
+jmockRuntimeDeps = ['cglib*', 'objenesis*']
 dependencies {
     compile 'commons-io:commons-io:1.4'
     compile 'commons-lang:commons-lang:2.4'
-    compile fileTree(dir: 'lib/smack_3_1_0', includes: ['*.jar'])
-    // TODO split into compile/runtime
-    testCompile fileTree(dir: 'lib/windowlicker-DEV', includes: ['*.jar'])
-    // TODO split into compile/runtime
-    testCompile fileTree(dir: 'lib/jmock-SNAPSHOT', includes: ['*.jar'])
+    compile 'jivesoftware:smack:3.1.0'
+    testCompile fileTree('lib/windowlicker-DEV')
+    testCompile fileTree(dir: 'lib/jmock-SNAPSHOT', excludes: jmockRuntimeDeps)
+    testRuntime fileTree(dir: 'lib/jmock-SNAPSHOT', includes: jmockRuntimeDeps)
     testCompile 'junit:junit:4.7'
 }
 
