--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -1,20 +1,18 @@
 usePlugin 'java'
 
+group = 'goos'
+version = '1.0'
+
 repositories {
     mavenCentral()
 }
 
 jmockRuntimeDeps = ['cglib*', 'objenesis*']
 dependencies {
-    compile 'commons-io:commons-io:1.4'
     compile 'commons-lang:commons-lang:2.4'
     compile 'jivesoftware:smack:3.1.0'
-    testCompile fileTree('lib/windowlicker-DEV')
-    testCompile fileTree(dir: 'lib/jmock-SNAPSHOT', excludes: jmockRuntimeDeps)
-    testRuntime fileTree(dir: 'lib/jmock-SNAPSHOT', includes: jmockRuntimeDeps)
+    testCompile fileTree('../snapshot-repo/hamcrest-SNAPSHOT')
+    testCompile fileTree(dir: '../snapshot-repo/jmock-SNAPSHOT', excludes: jmockRuntimeDeps)
+    testRuntime fileTree(dir: '../snapshot-repo/jmock-SNAPSHOT', includes: jmockRuntimeDeps)
     testCompile 'junit:junit:4.7'
-}
-
-test {
-    options.systemProperties['com.objogate.wl.keyboard'] = 'US'
 }
