--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -10,6 +10,7 @@ repositories {
 jmockRuntimeDeps = ['cglib*', 'objenesis*']
 dependencies {
     compile 'commons-lang:commons-lang:2.4'
+    compile 'commons-io:commons-io:1.4'
     compile 'jivesoftware:smack:3.1.0'
     testCompile fileTree('../snapshot-repo/hamcrest-SNAPSHOT')
     testCompile fileTree(dir: '../snapshot-repo/jmock-SNAPSHOT', excludes: jmockRuntimeDeps)
