--- a/junit-fest-tests/build.gradle
+++ b/junit-fest-tests/build.gradle
@@ -14,3 +14,5 @@ dependencies {
 //    compile 'jivesoftware:smackx:3.1.0'
     testCompile 'junit:junit:4.7'
 }
+
+// TODO equivalent to build.xml's openfire.check target using waitfor
