--- a/junit-windowlicker-tests/build.gradle
+++ b/junit-windowlicker-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile 'junit:junit:4.7'
 }
 
+// TODO equivalent to build.xml's openfire.check target using waitfor
+
 test {
     options.systemProperties['com.objogate.wl.keyboard'] = 'US'
 }
